# Authentication-Transmission-System

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/attack_test_gui/: AttackExecutionController.cpp  AttackExecutionController.h  AttackTestMainWindow.cpp  AttackTestMainWindow.h  AttackTestNetworkController.cpp  AttackTestNetworkController.h  CMakeLists.txt  main.cpp
apps/common_gui/: AuthenticationMonitorWidget.cpp  AuthenticationMonitorWidget.h  CMakeLists.txt
apps/manager_gui/: CMakeLists.txt  ManagerAttackExperimentController.cpp  ManagerAttackExperimentController.h  ManagerAuthenticationController.cpp  ManagerAuthenticationController.h  ManagerMainWindow.cpp  ManagerMainWindow.h  ManagerNetworkController.cpp  ManagerNetworkController.h  main.cpp
apps/node_agent/: CMakeLists.txt  main.cpp
apps/node_agent/include/tesla/node_agent/: NodeAgentService.h  NodeAuthenticationConfigController.h  SystemTimeSynchronization.h  TcpManagementServer.h  UdpDiscoveryService.h  UdpMulticastChannel.h
apps/node_agent/src/: NetworkInterfaceSelector.cpp  NodeAgentService.cpp  NodeAuthenticationConfigController.cpp  SystemTimeSynchronization.cpp  TcpManagementServer.cpp  UdpDiscoveryService.cpp  UdpMulticastChannel.cpp  WindowsReviewStub.cpp
apps/pc_node_gui/: CMakeLists.txt  PcAuthenticationViews.h  PcNodeMainWindow.cpp  PcNodeMainWindow.h  PcNodeNetworkController.cpp  PcNodeNetworkController.h  main.cpp
apps/uav_monitor_gui/: AuthenticationMetricsView.cpp  AuthenticationMetricsView.h  CMakeLists.txt  UavMonitorMainWindow.cpp  UavMonitorMainWindow.h  UavMonitorNetworkController.cpp  UavMonitorNetworkController.h  main.cpp
common/crypto/: CMakeLists.txt
common/crypto/include/tesla/crypto/: CryptoAlgorithm.h  CryptoProvider.h  CryptoTypes.h  CryptoUtilities.h  KeyChain.h  KeyChainVerifier.h  OpenSslCryptoProvider.h  OpenSslSecureRandomProvider.h  SecureRandomProvider.h
common/crypto/src/: CryptoUtilities.cpp  KeyChain.cpp  KeyChainVerifier.cpp  OpenSslCryptoProvider.cpp  OpenSslSecureRandomProvider.cpp
common/metrics/: CMakeLists.txt
common/metrics/include/tesla/metrics/: AuthenticationMetrics.h  CommunicationCost.h  PerformanceCounterSampler.h
common/metrics/src/: AuthenticationMetrics.cpp  CommunicationCost.cpp  PerformanceCounterSampler.cpp
common/protocol/: CMakeLists.txt
common/protocol/include/tesla/protocol/: AttackControl.h  AuthenticationControl.h  AuthenticationControlMessageDetails.h  AuthenticationControlTypes.h  AuthenticationControlValueCodec.h  MetricControl.h  MonitorControl.h  NodeControlJsonCodec.h  NodeControlMessage.h  NodeDiscoveryJsonCodec.h  NodeDiscoveryMessage.h  ProtocolDecodeError.h  ProtocolTypes.h  TcpFrame.h  TcpFrameCodec.h  TcpFrameStreamDecoder.h  UdpAuthenticationPacket.h  UdpAuthenticationPacketCodec.h  UdpAuthenticationPacketContext.h
common/protocol/src/: AttackControl.cpp  AuthenticationControl.cpp  AuthenticationControlMessageDetails.cpp  AuthenticationControlValueCodec.cpp  BinaryCodecUtilities.h  ExperimentControl.cpp  MetricControl.cpp  MonitorControl.cpp  NodeControlJsonCodec.cpp  NodeControlMessage.cpp  NodeDiscoveryJsonCodec.cpp  NodeDiscoveryMessage.cpp  ProtocolDecodeError.cpp  ProtocolTypes.cpp  TcpFrame.cpp  TcpFrameCodec.cpp  TcpFrameStreamDecoder.cpp  UdpAuthenticationPacket.cpp  UdpAuthenticationPacketCodec.cpp  UdpAuthenticationPacketContext.cpp
common/tesla/: CMakeLists.txt
common/tesla/include/tesla/core/: AuthenticationAuthority.h  AuthenticationFaultInjection.h  AuthenticationGroupInput.h  AuthenticationInputEncoder.h  AuthenticationNodeRuntime.h  AuthenticationObservationFactory.h  AuthenticationObservationStore.h  AuthenticationPacketInput.h  AuthenticationReceiverRuntime.h  AuthenticationRoundParameters.h  AuthenticationRuntimeTypes.h  AuthenticationSenderRuntime.h  FileUploadSession.h  ImprovedAuthenticationDetails.h  ImprovedTeslaDetails.h  ImprovedTeslaParameters.h  ImprovedTeslaStrategy.h  ImprovedVerificationDetails.h  ImprovedVerificationPath.h  KsRsMatrix.h  KsRsVerificationResult.h  KsRsVerifier.h  LocalSenderKeyChainObservation.h  NativeAuthenticationDetails.h  NativePacketStatus.h  NativeTeslaDetails.h  NativeTeslaStrategy.h  NativeVerificationDetails.h  ReceiverAuthenticationContext.h  ReceiverAuthenticationContextStore.h  SamdAggregator.h  SenderAuthenticationContext.h  SenderAuthenticationMaterial.h  TeslaAuthenticationDetails.h  TeslaMac.h  (+5 more)
common/tesla/src/: AuthenticationAuthority.cpp  AuthenticationFaultInjection.cpp  AuthenticationGroupInput.cpp  AuthenticationInputEncoder.cpp  AuthenticationNodeRuntime.cpp  AuthenticationObservationFactory.cpp  AuthenticationObservationStore.cpp  AuthenticationPacketInput.cpp  AuthenticationReceiverRuntime.cpp  AuthenticationRoundParameters.cpp  AuthenticationRuntimeTypes.cpp  AuthenticationSenderRuntime.cpp  FileUploadSession.cpp  ImprovedAuthenticationDetails.cpp  ImprovedTeslaDetails.cpp  ImprovedTeslaParameters.cpp  ImprovedTeslaStrategy.cpp  ImprovedVerificationDetails.cpp  KsRsMatrix.cpp  KsRsVerificationResult.cpp  KsRsVerifier.cpp  LocalSenderKeyChainObservation.cpp  NativeAuthenticationDetails.cpp  NativeTeslaDetails.cpp  NativeTeslaStrategy.cpp  NativeVerificationDetails.cpp  ReceiverAuthenticationContext.cpp  ReceiverAuthenticationContextStore.cpp  SamdAggregator.cpp  SenderAuthenticationContext.cpp  SenderAuthenticationMaterial.cpp  TeslaMac.cpp  TeslaStrategy.cpp  TeslaVerificationResult.cpp  UdpAuthenticationInputMapper.cpp
common/workload/: CMakeLists.txt
common/workload/src/: FileWorkload.cpp  TextWorkload.cpp
tests/: CMakeLists.txt
tests/crypto_tests/: CMakeLists.txt  main.cpp
tests/gui_stage5_tests/: CMakeLists.txt  main.cpp
tests/integration_tests/: CMakeLists.txt  main.cpp
tests/protocol_tests/: CMakeLists.txt  main.cpp
tests/stage10_tests/: CMakeLists.txt  main.cpp
tests/stage6_tests/: CMakeLists.txt  main.cpp
tests/stage7_tests/: CMakeLists.txt  main.cpp
tests/stage8_tests/: CMakeLists.txt  main.cpp
tests/stage9_tests/: CMakeLists.txt  main.cpp
tests/tesla_tests/: CMakeLists.txt  main.cpp
(+9 files in other folders)
